<resources>

    <string name="app_name">My Application</string>
    <string name="login_button">Login</string>
    <string name="signUp_button">Sign Up</string>
    <string name="alternate_logo">BacktoLearn48 official logo</string>
    <string name="brand_name">BACKTOLEARN48</string>
    <string name="brand_description">Your Personal Study Buddy</string>
    <string name="author">DEVELOPED BY LLOYD STUDIOS</string>

    <string name="forgot_password">Forgot password</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="username_description">Enter your username</string>
    <string name="password_description">Enter your password</string>
    <string name="welcome_login">Welcome Back!</string>
    <string name="link">Log in below or <a href="https://www.google.com">create an account</a></string>
    <string name="back_button">Back</string>

    <string name="welcome_signup">Create an account</string>
    <string name="login_link">Enter your account details below or <a href="https://www.google.com">log in</a></string>
    <string name="date_label">Date of Birth</string>
    <string name="email_label">Email</string>
    <string name="date_description">MM / DD / YY</string>
    <string name="email_description">Enter your email</string>

    <string name="welcome_dashboard">WELCOME TO BACKTOLEARN48</string>
    <string name="dashboard_description">The learning platform that will help you store resources from the Internet as well as allocate everything you need in preparation for quizzes, examinations, projects, group presentations, and thesis/capstones</string>
    <string name="subcategory1">RESOURCE LIBRARY</string>
    <string name="sublabel1">Sources from the internet</string>
    <string name="subcategory2">STUDYLOAD</string>
    <string name="sublabel2">Schedule of subjects, courses, and electives</string>
    <string name="subcategory3">EVENTS N ACTIVITIES</string>
    <string name="sublabel3">Scheduled events and activities to attend </string>
    <string name="subcategory4">NEW DISCOVERIES</string>
    <string name="sublabel4">Learn new things</string>
    <string name="logout_button">Logout</string>

    <string name="resrcLb_description">This place serves as a library storing links from all kinds sources including Wikipedia, StackOverflow, YouTube, Instagram, and more. Feel free to add and insert new sources</string>
    <string name="src_dummy1">DATA STRUCTS</string>
    <string name="dummy_desc1">Data Structures and Algorithms Tutorials</string>




</resources>